Adicionando campo cnae_code ao request e equivalente no controller
